@@ -1,4 +1,7 @@
 
+2009-03-29 17:28 Ali aliov@xfce.org 
+	 * : Disabling lid and sleep buttons if the power manager is in inhibit state
+
 2009-03-29 16:24 Ali aliov@xfce.org 
 	 * : Added option to reload panel brightness plugin
 
